--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Configurations": {
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost; Port=5432; Database=HomeDelivery_Prod; User Id=usr_postgres; Password = usr_postgres;"
+    },
+    "TokenConfigurations": {
+      "Key": "b14ca5898a4e4133bbce2ea2315a1916"
+    }
+  }
 }
